# mcr

./: .gitignore  0_main.ipynb  README.md  benchmark.py  equiv_check.ipynb  exp_benchmark.sh  exp_mcr_benchmark.py  fasttodd.sh  find_sample.py  graph.py  log.csv  log.txt  loop_exp_benchmark.sh  main.py  mcr_opt_dev.ipynb  opt_using_mcr.py  optimizer.py  paper_mcr  pauli_strings.txt  perform_mcr.py  plot.ipynb  pyproject.toml  sample.py  sample.txt  stim_save.ipynb  te_pai_data.pickle  test.ipynb  test.py  test.sh  todd_sample_search.py  trace.py  unopt_10.pickle  unopt_2.pickle  unopt_20.pickle  unopt_2_basic.pickle  unopt_3.pickle  unopt_4.pickle  unopt_5.pickle  unopt_seq.pickle  unopt_small.pickle  (+1 more)
circuit_data/: input_circuit.qasm  unopted_circuit.qasm
mcr/: circuit_ops.py  cl2_class.py  clifford.py  clifford_t_algebra.py  converter.py  equiv_check.py  fast.py  filesave.py  gate_apply.py  gate_sequence_generator.py  kak.py  litinski_compile.py  mcr_optimize.py  measurement.py  mycircuit.py  mydecomp.py  optimize.py  pauli_bit_ops.py  pyzxfunc.py  rot_class.py  rotation_2q_class.py  rotation_circuit.py  sample_calc.py  stim_function.py  tmerge_function.py  unopt.py  unoptimize.py  utility.py  utils.py
results/: n=2_k=4.csv  n=2_k=4_fasttodd.csv  n=3_k=9.csv  n=3_k=9_fasttodd.csv  n=4_k=16.csv  n=4_k=16_fasttodd.csv  n=5_k=25.csv  n=5_k=25_fasttodd.csv  n=6_k=36.csv  n=6_k=36_fasttodd.csv  n=7_k=49.csv  n=7_k=49_fasttodd.csv  n=8_k=64.csv  n=8_k=64_fasttodd.csv  n=9_k=81.csv  n=9_k=81_fasttodd.csv
results_with_swap/: n=2_k=4.csv  n=2_k=4_fasttodd.csv  n=3_k=9.csv  n=3_k=9_fasttodd.csv  n=4_k=16.csv  n=4_k=16_fasttodd.csv  n=5_k=25.csv  n=5_k=25_fasttodd.csv  n=6_k=36.csv  n=6_k=36_fasttodd.csv  n=7_k=49.csv  n=7_k=49_fasttodd.csv  n=8_k=64.csv  n=8_k=64_fasttodd.csv  n=9_k=81.csv  n=9_k=81_fasttodd.csv
script/: benchmark.sh  benchmark_loop.sh  main.sh  mcr_benchmark.py  only_clifford.py  search.py  separate_clifford_t.py  separate_clifford_t.sh
