[project]
name = "mcr"
version = "0.1.0"
description = ""
authors = [{ name = "yforest-osaka", email = "mori.yusei@gmail.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "qulacs>=0.6.4.1,<0.7",
    "qiskit>=1.2.0,<2",
    "pyzx>=0.8.0,<0.9",
    "numpy==1.26.4",
    "matplotlib>=3.9.2,<4",
    "qulacsvis>=0.7.3,<0.8",
    "seaborn>=0.13.2,<0.14",
    "pytket>=1.32.0,<2",
    "pytest>=8.3.2,<9",
    "joblib>=1.4.2,<2",
    "natsort>=8.4.0,<9",
    "tqdm>=4.66.5,<5",
    "ipykernel>=6.29.5,<7",
    "pylatexenc~=2.10",
    "qiskit-ibm-runtime>=0.31.0,<0.32",
    "qiskit-aer>=0.15.1,<0.16",
    "qnexus>=0.7.0,<0.8",
    "mqt-qcec>=2.8.0,<3",
    "numba>=0.60.0,<0.61",
    "snakeviz>=2.2.2,<3",
    "pybind11>=2.13.6,<3",
    "stim>=1.14.0,<2",
    "pdf2image>=1.17.0,<2",
    "staq>=0.1.20,<0.2",
    "timeout-decorator>=0.5.0,<0.6",
    "pandas<2.2.0",
    "scipy==1.14.1",
    "pathlib>=1.0.1,<2",
    "pennylane>=0.41.0,<0.42",
    "more-itertools>=10.7.0",
]
packages = [{ include = "mcr" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
